--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,7 +91,7 @@ body {
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border outline-ring/50;
   }
   body {
     @apply bg-background text-foreground;
@@ -101,4 +101,3 @@ body {
 #three-toggler > :nth-last-child(1) {
   transition: left 0.3s ease-in-out;
 }
-
